--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -14,7 +14,7 @@ body, h1, p, label, input, button, a {
     justify-content: center;
     align-items: center;
     height: 85vh;
-    background-color: #ffffff;
+    //background-color: #ffffff;
 }
 
 .login-container {
