--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,9 +1,16 @@
 <div class="sidenav-body-container">
     <div class="sidenav-body">
-        <h1>ToDo App</h1>
-        
-        <div>Dashboard</div>
-        <div>ToDos</div>
-        <div>Termine</div>
+      <h1>ToDo App</h1>
+      
+      <div>
+        <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+      </div>
+      <div>
+        <a routerLink="/to-do" routerLinkActive="active">ToDos</a>
+      </div>
+      <div>
+        <a routerLink="/appointment" routerLinkActive="active">Termine</a>
+      </div>
     </div>
-</div>
+  </div>
+  
