--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    background-color: #f3f5ef;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+body, h1, p, label, input, button, a {
+    font-family: Arial, Helvetica, sans-serif;
+}
+  
