--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -17,8 +17,9 @@
 }
 
 .sidenav-body h1 {
-    font-size: 24px;
+    font-size: 28px;
     margin-bottom: 20px;
+    padding: 10px 15px;
 }
 
 .sidenav-body a {
@@ -27,6 +28,7 @@
     display: flex; 
     align-items: center; 
     padding: 10px 15px; 
+    margin-top: 10px;
     margin-bottom: 10px;
     border-radius: 4px; 
     cursor: pointer; 
@@ -36,7 +38,6 @@
     background-color: #34495e;
 }
 
-/* Stil für aktiven Link */
 .sidenav-body a.active {
     font-weight: bold;
 }
