--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,18 +14,18 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px 20px 10px;
+    padding: 20px 20px 10px;
+    margin-right: 1rem;
 }
 
 .logout button {
-    background-color: gray;
+    background-color: rgb(170, 170, 170);
     color: white;
     border: none;
-    padding: 7px 12px;
-    border-radius: 4px;
+    padding: 7px 7px;
+    border-radius: 8px;
     cursor: pointer;
     font-size: 16px;
-    font-weight: bold;
     transition: background-color 0.3s ease;
 }
 
