--- a/src/app/components/to-do/to-do.component.html
+++ b/src/app/components/to-do/to-do.component.html
@@ -1,3 +1,85 @@
-<div class="todos">
-    <p>hallo</p>
+<div class="main">
+    <div class="todos">
+        <div class="head">
+            <h1>ToDo's</h1>
+            <button class="add-todo" (click)="openAddTodoModal()">ToDo hinzufügen</button>
+        </div>
+        <div class="todo-controls">
+            <input type="search" id="search" placeholder="Suche nach Aufgabe" (input)="updateSearch($event)">
+            <select (change)="updateStatus($event)">
+                @for (status of statusList; track $index) {
+                <option [value]="status">{{status}}</option>
+                }
+            </select>
+        </div>
+        <table class="todos-table">
+            <thead>
+                <tr class="table-head-row">
+                    @for (column of columns; track $index) {
+                        <th class="table-header-cell">
+                            {{ column.label }}
+                        </th>
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @if (displayedTodoData.length > 0) {
+                    @for (row of displayedTodoData; track $index) {
+                        <tr class="table-body-row">
+                            <td class="table-data-cell">
+                                {{ row.title }}
+                            </td>
+                            <td class="table-data-cell">
+                                {{ row.users }}
+                            </td>
+                            <td class="table-data-cell">
+                                {{ row.date | date : 'd.M.yyyy' }}
+                            </td>
+                            <td class="table-data-cell status">
+                                <span class="status"[ngClass]="{'open': row.status == false, 'closed': row.status == true}">
+                                    {{ row.status ? "GESCHLOSSEN" : "OFFEN" }}
+                                </span>                            
+                            </td>
+                            <td class="table-data-cell">
+                                <button class="action edit" (click)="openEditTodoModal(row)">
+                                    <svg width="24" height="24" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"></path>
+                                    </svg>
+                                </button>
+                                <button class="action delete" (click)="openDeleteTodoModal(row)">
+                                    <svg width="24" height="24" fill="none" stroke-width="1.5" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"></path>
+                                    </svg>
+                                </button>
+                            </td>
+                        </tr>
+                    }
+                }
+                @else {
+                    <tr class="table-body-row">
+                        <td class="table-data-cell" colspan="5">
+                            Keine ToDo's
+                        </td>
+                    </tr>
+                }
+            </tbody>
+            <tfoot>
+              <tr>
+                <td colspan="5">
+                  <div class="pagination">
+                    @if (activeStatus == "ALLE") {
+                        <span class="pagination-info" id="pageInfo">Insgesamt {{ displayedTodoData.length }} ToDo's</span>
+                    }
+                    @else if (activeStatus == "OFFEN") {
+                        <span class="pagination-info" id="pageInfo">{{ displayedTodoData.length }} offene ToDo's</span>
+                    }
+                    @else if (activeStatus == "GESCHLOSSEN") {
+                        <span class="pagination-info" id="pageInfo">{{ displayedTodoData.length }} geschlossene ToDo's</span>
+                    }
+                  </div>
+                </td>
+              </tr>
+            </tfoot>
+        </table>
+    </div>
 </div>
