--- a/src/app/components/to-do/add-to-do/add-to-do.component.html
+++ b/src/app/components/to-do/add-to-do/add-to-do.component.html
@@ -9,7 +9,7 @@
               <input
                 matInput
                 placeholder="Aufgabe"
-                formControlName="name"
+                formControlName="title"
                 required
               />
             </mat-form-field>
