--- a/src/app/components/appointment/edit-appointment/edit-appointment.component.html
+++ b/src/app/components/appointment/edit-appointment/edit-appointment.component.html
@@ -9,7 +9,7 @@
                 <input
                   matInput
                   placeholder="Termin"
-                  formControlName="name"
+                  formControlName="title"
                   required
                 />
               </mat-form-field>
