--- a/src/app/components/to-do/add-to-do/add-to-do.component.html
+++ b/src/app/components/to-do/add-to-do/add-to-do.component.html
@@ -1,5 +1,5 @@
-<mat-dialog-content>
-  <div class="modal-overlay" (click)="closeDialog()">
+<mat-dialog-content class="modal-overlay">
+  <div class="modal-overlay-div" (click)="closeDialog()">
     <div class="modal" (click)="$event.stopPropagation()">
       <div class="modal-content">
         <h2>ToDo hinzufügen</h2>
@@ -29,9 +29,9 @@
             </mat-form-field>
             <mat-form-field appearance="outline">
               <mat-select formControlName="users" multiple>
-                <mat-option *ngFor="let user of userList" [value]="user">
-                  {{user.firstname}} {{user.lastname}} {{user?.id === user.id ? "(Ich)" : ""}}
-                </mat-option>
+                @for (user of userList; track $index) {
+                  <mat-option [value]="user">{{user.firstname}} {{user.lastname}} {{user?.id === user.id ? "(Ich)" : ""}}</mat-option>
+                }
               </mat-select>
             </mat-form-field>
           </div>
